# cexp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/: cexp.h
src/: cexp.c  cexp_pow.c  test.c
src/examples/: basic.c  calculator.c
